--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href="https://github.com/wilaniepajalla/Sticker/blob/main/LUKBAN%20ESTATE.pdf">Click here</a></p>
+  <p><a href="LUKBAN%20ESTATE.pdf">Click here</a></p>
 </html>
