--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href="LUKBAN%20ESTATE.pdf">Click here</a></p>
+  <p font-size="14"><a href="LUKBAN%20ESTATE.pdf">Click here</a></p>
 </html>
